# bettenboerse

./: .gitignore  Dockerfile  README.md  TODOs  app.py  docker-compose.yml  forms.py  messages.py  models.py  pyproject.toml  requirements.txt  settings.py.example  tests.py
bettenboerse/: app.py  example_data.py  forms.py  letade.py  messages.py  models.py  settings.py.example  signal_messenger.py
bettenboerse/templates/: bulk_reservation.html  map.html  menschen_list.html  reservation_delete.html  reservation_edit.html  reservations_list.html  shelter_add.html  shelter_delete.html  shelter_show.html  signal_index.html  signal_logs.html  spenden.html  warnings.html  übersicht.html
scripts/cal-export/: excel2vcard.py
templates/: 404.html  base.html  bulk_reservation.html  detail_show.html  find_shelter.html  index.html  list.html  map.html  mensch_add.html  mensch_create.html  mensch_delete.html  mensch_edit.html  mensch_show.html  menschen_list.html  reservation_edit.html  reservations_list.html  shelter_add.html  shelter_delete.html  shelter_edit.html  shelter_list.html  shelter_show.html  signal_index.html  signal_logs.html  signal_send.html  sleeping_place_delete.html  sleeping_place_edit.html  sleeping_place_list.html  sleeping_place_show.html  test.html  warnings.html  übersicht.html
tests/: base.py  generate_test_data.py  test_basics.py  test_menschen.py  test_shelters.py
