[tool.poetry]
name = "bettenboerse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-httpauth = "^4.8.0"
flask-migrate = "^4.1.0"
wtforms = "^3.2.1"
flask-wtf = "^1.2.2"
flask-qrcode = "^3.2.0"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
waitress = "^3.0.2"
pysignalclirestapi = {git = "https://github.com/kmille/pysignalclirestapi.git"}


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bettenboerse = "bettenboerse.app:main"
